# isolate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cliff.toml  dev-requirements.txt  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
plugins/: README.md  setup.py
plugins/isolate_ipython/: __init__.py  __main__.py  define.py  discover_state.py  notebooks.py
src/insulate/: __init__.py  registry.py
src/insulate/backends/: __init__.py  _base.py  conda.py  context.py  local.py  virtual_env.py
src/insulate/backends/connections/: __init__.py
src/insulate/backends/connections/ipc/: __init__.py  _base.py  agent.py
src/insulate/server/: __init__.py  _runs.py  _server.py
src/isolate/: __init__.py  _base.py  _interactive.py  _version.py  common.py  context.py  exceptions.py  interface.py  logger.py  logs.py  managed.py  registry.py
src/isolate/backends/: __init__.py  _base.py  common.py  conda.py  container.py  context.py  local.py  mamba.py  pyenv.py  remote.py  settings.py  virtual_env.py  virtualenv.py
src/isolate/backends/connections/: __init__.py  agent_startup.py  common.py
src/isolate/backends/connections/ipc/: __init__.py  _base.py  agent.py
src/isolate/common/: timestamp.py
src/isolate/connections/: __init__.py  common.py
src/isolate/connections/_local/: __init__.py  _base.py  agent_startup.py
src/isolate/connections/grpc/: __init__.py  _base.py  agent.py  agent_v2.py  configuration.py  interface.py
src/isolate/connections/grpc/definitions/: __init__.py  agent.proto  agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py  agent_v2.proto  agent_v2_pb2.py  agent_v2_pb2.pyi  agent_v2_pb2_grpc.py  common.proto  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py
src/isolate/connections/ipc/: __init__.py  _base.py  agent.py  bridge.py
src/isolate/server/: __init__.py  _auth.py  _models.py  _runs.py  _serialization.py  _server.py  _utils.py  agent.py  controller.py  health_server.py  interface.py  serialization.py  server.py
src/isolate/server/definitions/: __init__.py  agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py  bridge.proto  bridge_pb2.py  bridge_pb2.pyi  bridge_pb2_grpc.py  common_pb2.py  server.proto  server_pb2.py  server_pb2.pyi  server_pb2_grpc.py
src/isolate/server/health/: __init__.py  health_pb2.py  health_pb2_grpc.py
src/isolate/server_v2/: agent.py  controller.py  serialization.py
src/isolate/server_v2/definitions/: __init__.py  agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py  common.proto  common_pb2.py  common_pb2.pyi  controller.proto  controller_pb2.py  controller_pb2.pyi  controller_pb2_grpc.py
tests/: conftest.py  test_agent_v2.py  test_backends.py  test_common.py  test_concurrency.py  test_connections.py  test_connections_grpc_base.py  test_insulate.py  test_interactive.py  test_ipc.py  test_isolate.py  test_log.py  test_log_masking.py  test_logger.py  test_loglevel.py  test_serialization.py  test_server.py  test_shutdown.py  test_venv.py
tools/: Dockerfile  agent_requirements.txt  isolate_client.py  protobuf-requirements.txt  regen_grpc.py  requirements.txt  test_agent_requirements.txt
