[tool.poetry]
name = "isolate"
version = "0.12.8a0"
readme = "README.md"
description = "Managed isolated environments for Python"
authors = ["Features & Labels <hello@fal.ai>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
grpcio = ">=1.49"
protobuf = "*"

# These are non-intrusive packages with no transitive dependencies.
# They are also used in the agents themselves.
tblib = ">=1.7.0"
platformdirs = "*"

# For 3.10 and later, importlib-metadata's newer versions are included in the standard library.
importlib-metadata = { version = ">=4.4", python = "<3.10" }

# The following are build-related dependencies, and their usage sites are heavily
# guarded with optional_import() calls.
virtualenv = {version = ">=20.4", optional = true}
PyYAML = {version = ">=6.0", optional = true }

[tool.poetry.extras]
grpc = []
server = []
build = ["virtualenv", "PyYAML"]

[tool.poetry.plugins."isolate.backends"]
"virtualenv" = "isolate.backends.virtualenv:VirtualPythonEnvironment"
"conda" = "isolate.backends.conda:CondaEnvironment"
"local" = "isolate.backends.local:LocalPythonEnvironment"
"isolate-server" = "isolate.backends.remote:IsolateServer"
"pyenv" = "isolate.backends.pyenv:PyenvEnvironment"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
multi_line_output=3
use_parentheses=true
